const English = {
  titleHome: "Home",
  titleExercises: "Exercises",
  titleWorkout: "Workout",
  getStartedMessage: "Select an exercise to get started",
  getStartedCallToAction: "Start",
  submitting: "Submitting...",
  submit: "Submit",
  addExerciseTitle: "Add Exercise",
  addWorkoutTitle: "Add Workout",
  name: "Name",
  date: "Date",
  exercise: "Exercise",
  weight: "Weight",
  reps: "Reps",
  effortLevel: "Effort Level (RPE)",
  units: "Units",
  kg: "kg",
  lbs: "lbs",
};

export default English;
