url: http://localhost:8081
---
- launchApp
- tapOn:
    id: 'get-started'
- tapOn:
    id: 'add-exercise'
- tapOn:
    id: 'name'
- inputText: 'ExerciseName'
- tapOn:
    id: 'submit'
- assertVisible: 'ExerciseName'
- tapOn:
    id: 'add-workout'
